# mesh_rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  ui.rs
src/calculate/: mod.rs  triangulation.rs
src/model/: indexed_mesh.rs  mod.rs  obj.rs  stl.rs
src/repair/: mod.rs
src/util/: mod.rs
