[package]
name = "mesh_rs"
version = "1.0.2"
edition = "2024"
authors = ["VinukaThejana"]
description = "A Rust library for 3D mesh processing and analysis."
license = "MIT"
license-file = "LICENSE"
keywords = ["3dprinting", "mesh", "stl", "obj", "3dscaling"]

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
nalgebra = "0.34.1"
num-format = "0.4.4"
rayon = "1.11.0"
